--- a/css/chat.css
+++ b/css/chat.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:700);
-
 * {
   box-sizing: border-box;
 }
@@ -115,10 +113,6 @@ html, body {
   vertical-align: baseline;
 }
 
-#chatlog .name {
-
-}
-
 .pfp {
   vertical-align: text-top;
   margin-right: 5px;
@@ -126,4 +120,21 @@ html, body {
 
 .message-emote {
   vertical-align: text-top;
+}
+
+#settings {
+  position: absolute;
+  margin: auto;
+  border: 3px solid #333;
+  border-radius: 25px;
+  background-color: #000;
+  padding: 10px;
+  z-index: 1;
+  height: 80%;
+  transition: opacity 0.5s;
+}
+
+.settingsHide {
+  opacity: 0;
+  transition: opacity 0.5s;
 }
