--- a/css/chat.css
+++ b/css/chat.css
@@ -122,19 +122,46 @@ html, body {
   vertical-align: text-top;
 }
 
-#settings {
-  position: absolute;
+.settingsWrap {
+  left:0;
+  right:0;
+  top: 0;
+  bottom: 0;
   margin: auto;
+  position: absolute;
+  width: 400px;
+  position: absolute;
+  overflow: hidden;
+  height: 50%;
   border: 3px solid #333;
   border-radius: 25px;
   background-color: #000;
-  padding: 10px;
   z-index: 1;
-  height: 80%;
   transition: opacity 0.5s;
+}
+
+.settings {
+  overflow: auto;
+  height: 100%;
+  margin: auto;
+  padding: 10px;
 }
 
 .settingsHide {
   opacity: 0;
   transition: opacity 0.5s;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px     rgba(0,0,0,0.3); 
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px     rgba(0,0,0,0.5); 
 }
