--- a/css/chat.css
+++ b/css/chat.css
@@ -105,7 +105,7 @@ html, body {
 
 #chatlog .message {
   word-wrap: break-word;
-  vertical-align: middle;
+  vertical-align: sub;
 }
 
 #chatlog .badge {
@@ -125,7 +125,7 @@ html, body {
 }
 
 .message-emote {
-  vertical-align: text-top;
+  vertical-align: sub;
 }
 
 .settingsWrap {
