--- a/css/chat.css
+++ b/css/chat.css
@@ -172,7 +172,7 @@ html, body {
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px     rgba(0,0,0,0.5); 
+  -webkit-box-shadow: inset 0 0 6px     rgba(255,255,255,0.5); 
 }
 
 form span {
@@ -187,6 +187,10 @@ form p {
 form > div {
   max-width: fit-content;
   min-width: -webkit-fill-available;
+}
+
+label {
+  padding: 0 5px 0px 5px;
 }
 
 .textInput {
