--- a/css/chat.css
+++ b/css/chat.css
@@ -223,6 +223,10 @@ label {
   white-space: normal;
 }
 
+.tooltiptext {
+  margin: 3px;
+}
+
 /* Tooltip arrow */
 .tooltip .tooltiptext::after {
   content: "";
